2017-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginload.c (plugins_reload_from_dir): Call nvticache_save()
	after finishing nvts loading. This ensures that Redis periodic saving
	isn't needed and that only nvticache is saved on disk.

2017-03-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (main): Call openvas_SSL_init to initialize gnutls to
	avoid SIGSEGV in gnutls version prior to 3.3.0.

2017-03-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_smb.c (nasl_win_cmd_exec): Use wmiexec.py instead of winexe.

2017-03-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Adjust documentation with
	recent parameter name change.

2017-03-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped): Get tags instead of full nvti.
	(get_plugin_preference): Get name instead of full nvti.

	* src/attack.c (launch_plugin): Use nvticache_get_filename().

	* src/nasl_plugins.c (nasl_plugin_add): Call nvticache_check(). Adjust
	for nvticache changes.
	(prefs_add_nvti): Take name and prefs as arguments.

	* src/openvassd.c (flush_all_kbs), src/pluginload.c (plugins_init):
	Adjust function call.

	* src/pluginlaunch.c (update_running_processes), src/pluginscheduler.c
	(plugin_add, check_dependency_cycles): Use nvticache functions.

2017-03-22  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* misc/nvt_categories.h: Flush trailing whitespace.

	* nasl/nasl_text_utils.c: Define G_LOG_DOMAIN.

2017-03-20  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/pluginscheduler.c: Include gvm/base/prefs.h.
	(plugin_add): Check for deprecated plugin before attempting
	to schedule it.

2017-03-16  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto2.c (nasl_rsa_private_decrypt): New function.

	* nasl/nasl_crypto2.h: Add new function prototype.

	* nasl/nasl_init.c (libfuncs): Add rsa_private_decrypt().
