@@ -1,3 +1,8 @@
+2017-03-27  Juan Jose Nicola  <juan.nicola@greenbone.net>
+
+	* src/openvassd.c (main): Add preprocessor directives to check
+	the gnutls version.
+
 2017-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
 	* src/pluginload.c (plugins_reload_from_dir): Call nvticache_save()
